# terraform-module-prompt-injection-detection

./: .gitignore  LICENSE  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
demo/: README.md  main.tf
lambda/: handler.py
tests/: __init__.py  test_handler.py
